--- a/src/app/components/fatture/fatture.component.scss
+++ b/src/app/components/fatture/fatture.component.scss
@@ -9,3 +9,14 @@ td {
   padding-right: 8px;
 }
 
+#modifica{
+  background-color: blue;
+  color: white;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+#cancella{
+  background-color: red;
+  color: balck;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
