--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Press+Start+2P&family=Roboto+Mono:wght@100&display=swap');
+
+/*
+    font-family: 'Gruppo', cursive;
+
+    font-family: 'Press Start 2P', cursive;
+
+    font-family: 'Roboto Mono', monospace;
+ */
+
+ 
 
 
 html, body { height: 100%; }
