--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <form #form="ngForm" (ngSubmit)="login(form)" >
   <mat-card>
     <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
+      <mat-card-title id="login">Login</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <div fxLayout>
