--- a/src/app/components/fatture/fatture.component.html
+++ b/src/app/components/fatture/fatture.component.html
@@ -2,28 +2,7 @@
   <h1 class="text-white">Lista Fatture <span style="font: weight 700px; background-color:rgba(255, 0, 0, 0.565)"> {{labelRagioneSociale}}</span>
   </h1>
 
-  <!-->
-    <table class="example-full-width" cellspacing="0"><tr>
-      <tr>
-        <td><mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>from</mat-label>
-          <input matInput type="number">
-        </mat-form-field></td>
-
-        <td>
-          <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>to</mat-label>
-          <input matInput type="number">
-        </mat-form-field>
-      </td>
-
-
-
-        <td><button type="submit">filtra </button></td>
-      </tr>
-    </table>
-
-  </p>-->
+ 
   <table mat-table [dataSource]="dataSource.content">
 
     <ng-container matColumnDef="id">
@@ -65,7 +44,8 @@
       <th mat-header-cell *matHeaderCellDef> Gestione Fattura</th>
       <td mat-cell *matCellDef="let element">
 
-        <button [routerLink]="['/form-fattura', element.id]" routerLinkActive="router-link-active" class="me-3">Modifica</button> <button (click)="cancellaFattura(element.id)">Cancella</button> </td>
+        <button [routerLink]="['/form-fattura', element.id]" routerLinkActive="router-link-active" class="me-3" id="modifica">Modifica</button>
+        <button (click)="cancellaFattura(element.id)"id="cancella">Cancella</button> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
