--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -31,7 +31,10 @@ li.dropdown {
   text-align: left;
 }
 
-.dropdown-content a:hover {background-color: #3f51b53c;}
+.dropdown-content a:hover {
+  background-color: #3f51b53c;
+
+}
 
 .dropdown:hover .dropdown-content {
   display: block;}
@@ -44,3 +47,4 @@ li.dropdown {
 
     color: white;
   }
+
