--- a/src/app/components/fatture/fatture.component.scss
+++ b/src/app/components/fatture/fatture.component.scss
@@ -10,13 +10,13 @@ td {
 }
 
 #modifica{
-  background-color: blue;
+  background-color: rgba(176, 17, 86, 0.969);
   color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 #cancella{
-  background-color: red;
-  color: balck;
+  background-color: rgba(176, 17, 86, 0.969);
+  color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
