--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,11 +10,17 @@
     font-family: 'Roboto Mono', monospace;
  */
 
- 
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 
 .mat-typography.mat-app-background{
