--- a/src/app/components/clienti/clienti.component.html
+++ b/src/app/components/clienti/clienti.component.html
@@ -6,45 +6,45 @@
   <table mat-table [dataSource]="dataSource.content">
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <th mat-header-cell *matHeaderCellDef style="color: rgba(176, 17, 86, 0.969); font-weight: bold"> id </th>
+      <td mat-cell *matCellDef="let element" style="color: rgba(176, 17, 86, 0.969); font-weight: bold"> {{element.id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="partitaIva">
-      <th mat-header-cell *matHeaderCellDef> Partita Iva</th>
+      <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: bold"> Partita Iva</th>
       <td mat-cell *matCellDef="let element"> {{element.partitaIva}} </td>
     </ng-container>
 
     <ng-container matColumnDef="pec">
-      <th mat-header-cell *matHeaderCellDef> Pec </th>
-      <td mat-cell *matCellDef="let element"> {{element.pec}} </td>
+      <th mat-header-cell *matHeaderCellDef style="color: rgb(188, 185, 185); font-weight: bold"> Pec </th>
+      <td mat-cell *matCellDef="let element" style="color: rgb(188, 185, 185);"> {{element.pec}} </td>
     </ng-container>
 
     <ng-container matColumnDef="telefono">
-      <th mat-header-cell *matHeaderCellDef> Telefono </th>
+      <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: bold"> Telefono </th>
       <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
     </ng-container>
 
     <ng-container matColumnDef="nomeEcognome">
-      <th mat-header-cell *matHeaderCellDef> Nome e Cognome</th>
-      <td mat-cell *matCellDef="let element"> {{element.nomeContatto}} {{element.cognomeContatto}} </td>
+      <th mat-header-cell *matHeaderCellDef style="color: rgb(188, 185, 185); font-weight: bold"> Nome e Cognome</th>
+      <td mat-cell *matCellDef="let element" style="color: rgb(188, 185, 185);"> {{element.nomeContatto}} {{element.cognomeContatto}} </td>
     </ng-container>
 
     <ng-container matColumnDef="telefonoContatto">
-      <th mat-header-cell *matHeaderCellDef> Telefono Contatto </th>
+      <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: bold"> Telefono Contatto </th>
       <td mat-cell *matCellDef="let element"> {{element.telefonoContatto}} </td>
     </ng-container>
 
     <ng-container matColumnDef="ragioneSociale">
-      <th mat-header-cell *matHeaderCellDef> Ragione Sociale </th>
-      <td mat-cell *matCellDef="let element"> {{element.ragioneSociale}} </td>
+      <th mat-header-cell *matHeaderCellDef style="color: rgb(188, 185, 185); font-weight: bold"> Ragione Sociale </th>
+      <td mat-cell *matCellDef="let element" style="color: rgb(188, 185, 185); "> {{element.ragioneSociale}} </td>
     </ng-container>
 
     <ng-container matColumnDef="gestioneCliente">
-      <th mat-header-cell *matHeaderCellDef> Gestione Cliente </th>
+      <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: bold"> Gestione Cliente </th>
       <td mat-cell *matCellDef="let element" >
         <button [routerLink]="['/nuova-fattura', element.id ]" routerLinkActive="router-link-active" class="me-3" id="nuovaFattura"  >Nuova Fattura </button>
-        <button [routerLink]="['/fatture/cliente', element.id]" routerLinkActive="router-link-active" class="me-3" id="dettagliFattura"> Dettagli Fatture</button>
+        <button [routerLink]="['/fatture/cliente', element.id]" routerLinkActive="router-link-active" class="me-3 " id="dettagliFattura"> Dettagli Fatture</button>
         <button [routerLink]="['/form-cliente', element.id]" routerLinkActive="router-link-active" class="me-3"id="modifica">Modifica</button>
         <button (click)="cancellaCliente(element.id)" id="cancella">Cancella</button>
       </td>
