--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -2,32 +2,32 @@
   <table mat-table [dataSource]="dataSource.content">
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <th mat-header-cell *matHeaderCellDef style="color: rgba(176, 17, 86, 0.969); font-weight: bold"> id </th>
+      <td mat-cell *matCellDef="let element" style="color: rgba(176, 17, 86, 0.969); font-weight: bold"> {{element.id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef> Username </th>
+      <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: bold"> Username </th>
       <td mat-cell *matCellDef="let element"> {{element.username}} </td>
     </ng-container>
 
     <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+      <th mat-header-cell *matHeaderCellDef style="color: rgb(188, 185, 185); font-weight: bold"> Nome </th>
+      <td mat-cell *matCellDef="let element"style="color: rgb(188, 185, 185);"> {{element.nome}} </td>
     </ng-container>
 
     <ng-container matColumnDef="cognome">
-      <th mat-header-cell *matHeaderCellDef> Cognome </th>
+      <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: bold"> Cognome </th>
       <td mat-cell *matCellDef="let element"> {{element.cognome}} </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> Email </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+      <th mat-header-cell *matHeaderCellDef style="color: rgb(188, 185, 185); font-weight: bold"> Email </th>
+      <td mat-cell *matCellDef="let element" style="color: rgb(188, 185, 185); "> {{element.email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="ruolo">
-      <th mat-header-cell *matHeaderCellDef> Ruolo </th>
+      <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: bold"> Ruolo </th>
       <td mat-cell *matCellDef="let element"> {{element.roles[0]?.roleName}}</td>
     </ng-container>
 
