--- a/src/app/components/fatture/fatture.component.html
+++ b/src/app/components/fatture/fatture.component.html
@@ -1,13 +1,13 @@
 <div class="m-5 pt-5 pb-5">
-  <h1 class="text-white">Lista Fatture <span style="font: weight 700px; background-color:rgba(255, 0, 0, 0.565)"> {{labelRagioneSociale}}</span>
+  <h1 class="text-white">Lista Fatture <span style="color: rgba(176, 17, 86, 0.969); font-weight: bold"> {{labelRagioneSociale}}</span>
   </h1>
 
 
   <table mat-table [dataSource]="dataSource.content">
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef style="color: rgba(176, 17, 86, 0.969);; font-weight: bold"> id </th>
-      <td mat-cell *matCellDef="let element" style="color: rgba(176, 17, 86, 0.969);; font-weight: bold"> {{element.id}} </td>
+      <th mat-header-cell *matHeaderCellDef style="color: rgba(176, 17, 86, 0.969); font-weight: bold"> id </th>
+      <td mat-cell *matCellDef="let element" style="color: rgba(176, 17, 86, 0.969); font-weight: bold"> {{element.id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="fatturaNumero">
