--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,4 +1,7 @@
+
 <div class="m-5 pt-5 pb-5">
+  <h1 style="color: rgba(176, 17, 86, 0.969); font-weight: bold">Lista Utenti</h1>
+
   <table mat-table [dataSource]="dataSource.content">
 
     <ng-container matColumnDef="id">
