--- a/src/app/components/clienti/clienti.component.html
+++ b/src/app/components/clienti/clienti.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="m-5 pt-5 pb-5">
-  <h1 class="mt-1"  style="color: rgba(176, 17, 86, 0.969); font-weight: bold">Lista Clienti</h1>
+  <h1 class="mt-1"  style="color: rgba(176, 17, 86, 0.969); font-weight: bold; font-family: 'Gruppo', cursive;">Lista Clienti</h1>
 
   <table mat-table [dataSource]="dataSource.content">
 
