--- a/src/app/components/fatture/fatture.component.html
+++ b/src/app/components/fatture/fatture.component.html
@@ -1,5 +1,5 @@
 <div class="m-5 pt-5 pb-5">
-  <h1 class="mt-1"  style="color: rgba(176, 17, 86, 0.969); font-weight: bold">Lista Fatture <span style="color: rgba(176, 17, 86, 0.969); font-weight: bold"> {{labelRagioneSociale}}</span>
+  <h1 class="mt-1"  style="color: rgba(176, 17, 86, 0.969); font-weight: bold; font-family: 'Gruppo', cursive;">Lista Fatture <span style="color: rgba(176, 17, 86, 0.969); font-weight: bold"> {{labelRagioneSociale}}</span>
   </h1>
 
 
