--- a/src/app/components/form-cliente/form-cliente.component.html
+++ b/src/app/components/form-cliente/form-cliente.component.html
@@ -1,6 +1,6 @@
 <div class="m-5 pt-3 p-5"  style="color:aliceblue">
   <div class="container">
-    <h2 class=>Form Cliente</h2>
+    <h2 style="font-family: 'Gruppo', cursive;">Form Cliente</h2>
     <div class="row">
         <div class="col-md-12">
             <form [formGroup]="form" (submit)="cSalva(form)">
