--- a/src/app/components/form-fattura/form-fattura.component.html
+++ b/src/app/components/form-fattura/form-fattura.component.html
@@ -1,5 +1,6 @@
 <div class="m-5 pt-3 p-5">
   <div class="container">
+    <h2 style="font-family: 'Gruppo', cursive;">Modifica Fattura </h2>
     <div class="row">
         <div class="col-md-12">
             <form [formGroup]="form" (submit)="cSalva(form)">
