adding font style 2

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -42,7 +42,7 @@
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit" >Accedi</button>
+      <button mat-raised-button color="primary" type="submit" style="margin-left:30%" >Accedi</button>
     </mat-card-actions>
   </mat-card>
 </form>
